--- a/Digital Escape/.vscode/settings.json
+++ b/Digital Escape/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Digital Escape.sln"
+    "dotnet.defaultSolution": "Digital Escape.slnx"
 }
